--- a/src/app/blog-category/blog-category.component.html
+++ b/src/app/blog-category/blog-category.component.html
@@ -1,3 +1,19 @@
-<p>
-  blog-category works!
-</p>
+<h1>Categories</h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+    </tr>
+  </tbody>
+</table>
