--- a/src/app/blog-category/blog-category.component.html
+++ b/src/app/blog-category/blog-category.component.html
@@ -7,13 +7,9 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
+    <tr *ngFor="let item of categories">
+      <td>{{ item.id }}</td>
+      <td>{{ item.name }}</td>
     </tr>
   </tbody>
 </table>
