Web basic layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<button type="button" [routerLink]="['/category']" class="btn btn-primary">Categories</button>
-<button type="button" class="btn btn-success">Create</button>
-<router-outlet></router-outlet>
+<app-header></app-header>
+<app-menu></app-menu>
+<app-sidebar></app-sidebar>
+<app-content></app-content>
+<app-footer></app-footer>
